[package]
name = "zisk-host"
version = "0.1.0"
edition = "2024"
default-run = "zisk-host"

[[bin]]
name = "zisk-host"
path = "src/main.rs"

[dependencies]
ixon = { path = "../../crates/ixon" }
# Neutral results-row contract (status enum, row writer, exit codes) shared
# with sp1-host and `ix bench`.
ix-bench = { path = "../../crates/bench" }
ix-common = { path = "../../crates/common" }
# Used only to count work items for human-readable output via
# `build_anon_work` — same enumeration the guest runs in-circuit.
ix-kernel = { path = "../../crates/kernel" }
zisk-sdk = { workspace = true }
anyhow = "1"
clap = { version = "4.0", features = ["derive"] }
# Neutral per-constant results JSON (`--json`), merged by the CI bench driver.
serde_json = "1"
# Accurate peak RAM via the process-tree sampler (captures the ASM
# microservices' child-process memory that `/proc/self/status` misses) and the
# per-phase timing sink feeding the CI drill-down.
tracing-texray = { git = "https://github.com/argumentcomputer/tracing-texray", rev = "bd4faa08a4fa4edb46bde393b4d20c6bd49591d0" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
# Throughput formatting (e.g. `42.0 consts/s`).
human-repr = "1"

[build-dependencies]
zisk-sdk = { workspace = true }
